# tracing-stackdriver

./: Cargo.toml
examples/: demo_full_fields.rs
src/: event_formatter.rs  google.rs  layer.rs  serializers.rs
tests/: valuable.rs
