[package]
name = "tracing-stackdriver-cw"
version = "0.1.0"
authors = ["Alex Pearson <alex@alexpear.com>", "Gabriel Bastos <gabriel.bastos@cloudwalk.io>", "Luiz Silveira <luiz.silveira@cloudwalk.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudwalk/tracing-stackdriver"
description = "Stackdriver-compatible tracing layer and event formatter"
keywords = ["tracing", "stackdriver", "logging", "google", "gcp"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[features]
valuable = ["dep:valuable", "valuable-serde"]

[dependencies]
Inflector = "0.11.4"
serde_json = "1.0.94"
tracing-core = "0.1.22"
thiserror = "1.0.40"
serde = { version = "1.0.193", features = ["derive"] }
time = { version = "0.3.30", default-features = false, features = ["formatting"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
valuable = { version = "0.1.0", optional = true, features = ["derive"] }
valuable-serde = { version = "0.1.0", optional = true }

[dev-dependencies]
tracing = "0.1.34"
time = { version = "0.3.30", features = ["serde", "serde-well-known", "formatting"] }
lazy_static = "1.4.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.31"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
